<resources>
    <string name="app_name">Coronow</string>
    <string name="country_tv_title">국내발생</string>
    <string name="daily_tv_title">일일 확진자</string>
    <string name="aboard_tv_title">해외발생</string>
    <string name="sum_tv_title">확진환자</string>
    <string name="care_tv_title">격리해제</string>
    <string name="care_ing_tv_title">치료중</string>
    <string name="death_tv_title">사망</string>

    <string name="bottom_home_title">확진자 현황</string>
    <string name="bottom_distance_title">거리두기 현황</string>

    <string name="my_rest_key">YgGRKGC6YuUfdJf6%2Fdx92rusXLxof8%2Fn3dmqHoDTnHImnzuSclh%2FGNdObZodM05y3NFb%2BUdMR704e3bfO2W11g%3D%3D</string>
</resources>